plugins {
    id 'com.android.application'
}

android {
    namespace 'com.scosche.sdk24.example'
    compileSdk 34
    compileSdkVersion 34
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.example.scoscherhythmsynctestapp"
        minSdkVersion 21
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    aaptOptions {
        noCompress "tflite"
    }

    packagingOptions {
        pickFirst 'lib/x86/libtensorflowlite_flex_jni.so'
        pickFirst 'lib/x86_64/libtensorflowlite_flex_jni.so'
        pickFirst 'lib/armeabi-v7a/libtensorflowlite_flex_jni.so'
        pickFirst 'lib/arm64-v8a/libtensorflowlite_flex_jni.so'
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation fileTree(dir: 'libs', include: ['*.aar'])
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    implementation 'com.google.android.gms:play-services-location:18.0.0'
    implementation('org.tensorflow:tensorflow-lite:+') { changing = true }
    implementation('org.tensorflow:tensorflow-lite-support:+') { changing = true }
    implementation('org.tensorflow:tensorflow-lite-select-tf-ops:+') { changing = true }
}